--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw7-backend-judexia",
+  "name": "final-backend-judexia",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
