--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "nodemon": "^1.18.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-github": "^1.1.0",
-    "redis": "^2.8.0"
+    "passport-github": "^1.1.0"
   }
 }
